[iOS] Star rating is covered with a black circle when writing a review on Yelp https://bugs.webkit.org/show_bug.cgi?id=197469 <rdar://problem/48094446>
Reviewed by Dean Jackson.

Source/WebCore:

This patch moves the background painting of the radio/checkbox form controls in checked state to RenderTheme.
It enables content authors to disable default appearance using -webkit-appearance: none (it is also inline with what we do on macOS).

Test: fast/forms/radio-and-checkbox-checked-with-no-appearance.html

* css/html.css:
(input:matches([type="checkbox"], [type="radio"]):checked):
* rendering/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::paintCheckboxDecorations):
(WebCore::RenderThemeIOS::paintRadioDecorations):

LayoutTests:

* fast/forms/radio-and-checkbox-checked-with-no-appearance-expected.html: Added.
* fast/forms/radio-and-checkbox-checked-with-no-appearance.html: Added.


Canonical link: https://commits.webkit.org/211650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244848 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/css/html.css
+++ b/Source/WebCore/css/html.css
@@ -886,7 +886,6 @@ input[type="checkbox"]:indeterminate:disabled {
 }
 
 input:matches([type="checkbox"], [type="radio"]):checked {
-    background: rgba(0, 0, 0, 0.8);
     border-color: rgba(255, 255, 255, 0.0);
 }
 
